# generic_tensors

./: .gitignore  CMakeLists.txt  README.md
examples/: Gemm.gen_ten.txt  GenTen.dialect  GenTen.syntax
generic-tensors/: CMakeLists.txt  generic_tensors.cpp
include/: CMakeLists.txt
include/Dialect/GenTen/IR/: CMakeLists.txt  GenTenCompilerIR.hpp  GenTenInterfaces.td  GenTenOps.h  GenTenOps.td  GenTenPrinter.h
include/Dialect/GenTen/Transforms/: CMakeLists.txt  PassDetail.h  Passes.h  Passes.td
include/Frontend/GenTenCompiler/: GenTenCompilerAST.hpp  GenTenCompilerGenTenGen.h  GenTenCompilerLexer.hpp  GenTenCompilerMlirGen.h  GenTenCompilerParser.hpp  GenTenLogger.h
lib/: CMakeLists.txt
lib/Dialect/: CMakeLists.txt
lib/Dialect/GenTen/: CMakeLists.txt
lib/Dialect/GenTen/IR/: GenTenCompilerIR.cpp  GenTenOps.cpp  GenTenPrinter.cpp
lib/Dialect/GenTen/Transforms/: CMakeLists.txt  GenTenCleanUp.cpp
lib/Frontend/: CMakeLists.txt
lib/Frontend/GenTenCompiler/: CMakeLists.txt  GenTenCompilerAST.cpp  GenTenCompilerGenTenGen.cpp  GenTenCompilerLexer.cpp  GenTenCompilerMlirGen.cpp  GenTenCompilerParser.cpp  GenTenLogger.cpp
